--- a/index-copy.html
+++ b/index-copy.html
@@ -452,108 +452,106 @@
     <!-- footer section -->
     <footer id="footer">
       <div class="container">
-        <h2 class="footer-head wow fadeInDown" wow-data-delay="5s">
-          لديك استفسار؟<span>تواصل معنا الآن</span>
-        </h2>
         <div class="footer-cont">
-          <div class="footer-contact">
-            <div class="contact-box">
-              <h3 class="contact-head">
-                <i class="las la-map-marker-alt"></i>
-                <span>العنوان</span>
-              </h3>
-              <p class="contact-pargh">
-                43 ش صلاح الدين الأيوبي، بجوار البنك الأهلى، الرياض - المملكة
-                العربية السعودية
-              </p>
+          <div class="row">
+            <div class="col-md-3 col-xs-12">
+              <div class="footer-info">
+                <figure class="img-logo">
+                  <a href="index.html"
+                    ><img
+                      src="images/second-logo.png"
+                      class="img-fluid"
+                      alt="img-logo"
+                  /></a>
+                </figure>
+                <div class="social">
+                  <a href="#" class="social-link">
+                    <i class="lab la-snapchat"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-whatsapp"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-instagram"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-telegram-plane"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-twitter"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </div>
+              </div>
             </div>
-            <div class="contact-box">
-              <h3 class="contact-head">
-                <i class="las la-mobile"></i>
-                <span>الجوال</span>
-              </h3>
-              <a href="tel:+966 54 381 2067" class="contact-ancor">
-                +966543812067
-              </a>
+            <div class="col-md-3 col-xs-12">
+              <div class="nav-foot-cont">
+                <h2 class="nav-foot-header foot-header">روابط سريعة</h2>
+                <ul class="nav-foot list-unstyled">
+                  <li class="nav-foot-li">
+                    <a href="#" class="nav-foot-link">من نحن</a>
+                  </li>
+                  <li class="nav-foot-li">
+                    <a href="#" class="nav-foot-link">تواصل معنا</a>
+                  </li>
+                  <li class="nav-foot-li">
+                    <a href="#" class="nav-foot-link">الأسئلة الشائعة</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="contact-box">
-              <h3 class="contact-head">
-                <i class="las la-envelope"></i>
-                <span> البريد الإلكتروني </span>
-              </h3>
-              <a href="mailto:info@stechme.com" class="contact-ancor">
-                info@stechme.com
-              </a>
+            <div class="col-md-6 col-xs-12">
+              <div class="nav-foot-cont">
+                <h2 class="nav-foot-header foot-header">معلومات التواصل</h2>
+                <div class="nav-foot">
+                  <ul class="list-unstyled">
+                    <li class="nav-foot-li">
+                      <div class="contact-box">
+                        <i class="las la-map-marker-alt"></i>
+                        <span>
+                          المملكة العربية السعودية - الرياض - حي الملقا - طريق
+                          الخير
+                        </span>
+                      </div>
+                    </li>
+                    <li class="nav-foot-li">
+                      <a href="tel:+966547434981" class="contact-box">
+                        <i class="las la-mobile"></i>
+                        <span style="direction: ltr"> +966547434981 </span>
+                      </a>
+                    </li>
+                    <li class="nav-foot-li">
+                      <a href="mailto:info@mangm.net" class="contact-box">
+                        <i class="las la-envelope"></i>
+                        <span> info@mangm.net </span>
+                      </a>
+                    </li>
+                  </ul>
+                  <div class="social">
+                    <a href="#" class="social-link">
+                      <i class="lab la-snapchat"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-whatsapp"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-instagram"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-telegram-plane"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-twitter"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="social">
-              <a href="#" class="social-link">
-                <i class="lab la-instagram"></i>
-              </a>
-              <a href="#" class="social-link">
-                <i class="lab la-telegram-plane"></i>
-              </a>
-              <a href="#" class="social-link">
-                <i class="lab la-twitter"></i>
-              </a>
-              <a href="#" class="social-link">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </div>
-          </div>
-          <div class="footer-form-cont">
-            <div class="form-head">
-              <h2>
-                ارسل لنا إستفسارك او اقتراحك الآن وسيتم الرد عليك في أقرب وقت
-                ممكن
-              </h2>
-            </div>
-            <form action="" class="footer-form">
-              <div class="form-group input-row">
-                <input
-                  type="text"
-                  class="form-input"
-                  name=""
-                  placeholder="الاسم بالكامل*"
-                />
-              </div>
-              <div class="form-group input-row">
-                <input
-                  type="tel"
-                  class="form-input"
-                  name=""
-                  placeholder="*رقم الجوال"
-                />
-              </div>
-              <div class="form-group input-row">
-                <select class="new-address-select">
-                  <option disabled selected hidden>المدينه</option>
-                  <option>السعودية</option>
-                  <option>الامارات العربية المتحدة</option>
-                  <option>البحرين</option>
-                  <option>الكويت</option>
-                  <option>سلطنة عًمان</option>
-                  <option>قطر</option>
-                </select>
-              </div>
-              <div class="form-group input-row">
-                <input
-                  type="email"
-                  class="form-input"
-                  name=""
-                  placeholder="البريد الإلكتروني"
-                />
-              </div>
-              <div class="form-group">
-                <textarea
-                  class="form-input"
-                  name=""
-                  placeholder="نص الرسالة*"
-                ></textarea>
-              </div>
-              <div class="form-btn-cont">
-                <button class="form-btn" type="submit">ارســـال</button>
-              </div>
-            </form>
           </div>
         </div>
         <p class="copy-right">© منجم 2022. برعاية تسوق، جميع الحقوق محفوظة</p>
