--- a/index-en.html
+++ b/index-en.html
@@ -461,114 +461,110 @@
     <!-- footer section -->
     <footer id="footer">
       <div class="container">
-        <h2 class="footer-head wow fadeInDown" wow-data-delay="5s">
-          Have an inquiry?<span>Contact us now</span>
-        </h2>
         <div class="footer-cont">
-          <div class="footer-contact">
-            <div class="contact-box">
-              <h3 class="contact-head">
-                <i class="las la-map-marker-alt"></i>
-                <span>Address</span>
-              </h3>
-              <p class="contact-pargh">
-                43 Salah El Din Al Ayoubi St., next to Al Ahly Bank, Riyadh -
-                Kingdom Saudi Arab
-              </p>
+          <div class="row">
+            <div class="col-md-3 col-xs-12">
+              <div class="footer-info">
+                <figure class="img-logo">
+                  <a href="index.html"
+                    ><img src="images/second-logo.png" class="img-fluid" alt="img-logo"
+                  /></a>
+                </figure>
+                <div class="social">
+                  <a href="#" class="social-link">
+                    <i class="lab la-snapchat"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-whatsapp"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-instagram"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-telegram-plane"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="lab la-twitter"></i>
+                  </a>
+                  <a href="#" class="social-link">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </div>
+              </div>
             </div>
-            <div class="contact-box">
-              <h3 class="contact-head">
-                <i class="las la-mobile"></i>
-                <span>phone</span>
-              </h3>
-              <a href="tel:+966 54 381 2067" class="contact-ancor">
-                +966543812067
-              </a>
+            <div class="col-md-3 col-xs-12">
+              <div class="nav-foot-cont">
+                <h2 class="nav-foot-header foot-header">Quick Links</h2>
+                <ul class="nav-foot list-unstyled">
+                  <li class="nav-foot-li">
+                    <a href="#" class="nav-foot-link">about us</a>
+                  </li>
+                  <li class="nav-foot-li">
+                    <a href="#" class="nav-foot-link">Contact us</a>
+                  </li>
+                  <li class="nav-foot-li">
+                    <a href="#" class="nav-foot-link">FAQ</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="contact-box">
-              <h3 class="contact-head">
-                <i class="las la-envelope"></i>
-                <span> E-mail</span>
-              </h3>
-              <a href="mailto:info@stechme.com" class="contact-ancor">
-                info@stechme.com
-              </a>
+            <div class="col-md-6 col-xs-12">
+              <div class="nav-foot-cont">
+                <h2 class="nav-foot-header foot-header">Contact Information</h2>
+                <div class="nav-foot">
+                  <ul class="list-unstyled">
+                    <li class="nav-foot-li">
+                      <div class="contact-box">
+                        <i class="las la-map-marker-alt"></i>
+                        <span>
+                          Kingdom of Saudi Arabia - Riyadh - Al-Malqa District - Al-Khair Road
+                        </span>
+                      </div>
+                    </li>
+                    <li class="nav-foot-li">
+                      <a href="tel:+966547434981" class="contact-box">
+                        <i class="las la-mobile"></i>
+                        <span style="direction: ltr;">
+                          +966547434981
+                        </span>
+                      </a>
+                    </li>
+                    <li class="nav-foot-li">
+                      <a href="mailto:info@mangm.net" class="contact-box">
+                        <i class="las la-envelope"></i>
+                        <span>
+                          info@mangm.net
+                        </span>
+                      </a>
+                    </li>
+                  </ul>
+                  <div class="social">
+                    <a href="#" class="social-link">
+                      <i class="lab la-snapchat"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-whatsapp"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-instagram"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-telegram-plane"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="lab la-twitter"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="social">
-              <a href="#" class="social-link">
-                <i class="lab la-instagram"></i>
-              </a>
-              <a href="#" class="social-link">
-                <i class="lab la-telegram-plane"></i>
-              </a>
-              <a href="#" class="social-link">
-                <i class="lab la-twitter"></i>
-              </a>
-              <a href="#" class="social-link">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </div>
-          </div>
-          <div class="footer-form-cont">
-            <div class="form-head">
-              <h2>
-                Send us your inquiry or suggestion now and we will respond to
-                you as soon as possible Maybe
-              </h2>
-            </div>
-            <form action="" class="footer-form">
-              <div class="form-group input-row">
-                <input
-                  type="text"
-                  class="form-input"
-                  name=""
-                  placeholder="full name*"
-                />
-              </div>
-              <div class="form-group input-row">
-                <input
-                  type="tel"
-                  class="form-input"
-                  name=""
-                  placeholder="Mobile number*"
-                />
-              </div>
-              <div class="form-group input-row">
-                <select class="new-address-select">
-                  <option disabled selected hidden>City</option>
-                  <option>Saudi Arabia</option>
-                  <option>The United Arab Emirates</option>
-                  <option>Bahrain</option>
-                  <option>kuwait</option>
-                  <option>Sultanate of Oman</option>
-                  <option>qatar</option>
-                </select>
-              </div>
-              <div class="form-group input-row">
-                <input
-                  type="email"
-                  class="form-input"
-                  name=""
-                  placeholder="email"
-                />
-              </div>
-              <div class="form-group">
-                <textarea
-                  class="form-input"
-                  name=""
-                  placeholder="Message text*"
-                ></textarea>
-              </div>
-              <div class="form-btn-cont">
-                <button class="form-btn" type="submit">send</button>
-              </div>
-            </form>
           </div>
         </div>
-        <p class="copy-right">
-          © Mine 2022. Sponsored by Shop, All Rights Reserved
-        </p>
-      </div>
+        <p class="copy-right">© Manjam 2022. Sponsored by Tasawk, all rights reserved</p>
+        </div>
     </footer>
     <!-- footer section -->
     <!-- arrow to top -->
