--- a/form.html
+++ b/form.html
@@ -151,6 +151,15 @@
               <input type="email" class="form-input" name="" />
             </div>
             <div class="form-group">
+              <label class="main-label">البريد الإلكتروني</label>
+              <div class="form-domain">
+                <input type="email" class="form-input" name="" />
+                <div class="input-append">
+                  <span class="input-text" id="basic-addon2">@example.com</span>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
               <label class="main-label">مجالات العمل</label>
               <textarea class="form-input" name=""></textarea>
             </div>
