--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
           <h3 class="blog-head">المدونة</h3>
         </div>
         <div class="blog-slider">
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
+          <div class="blogs-flex-parent">
+            <div class="blogs-flex">
               <div class="swiper-slide">
                 <div class="blog">
                   <a href="post.html">
@@ -393,6 +393,31 @@
                         class="blog-img"
                         alt="image1"
                         src="images/blog/02.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
+                  <div class="blog-content">
+                    <a class="blog-link" href="#"
+                      >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
+                      لصفحة ما
+                    </a>
+                    <p class="blog-pargh">
+                      سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
+                      الفقرات في الصفحة التي
+                    </p>
+                    <a class="blog-read" href="#"> قراءة المزيد </a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="blog">
+                  <a href="post-en.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/03.jpg"
                         class="img-fluid"
                       />
                     </figure>
