--- a/form.html
+++ b/form.html
@@ -147,6 +147,10 @@
               <input type="tel" class="form-input" name="" />
             </div>
             <div class="form-group">
+              <label class="main-label">رقم الجوال</label>
+              <input type="number" class="form-input" name=""  placeholder="رقم"/>
+            </div>
+            <div class="form-group">
               <label class="main-label">البريد الإلكتروني</label>
               <input type="email" class="form-input" name="" />
             </div>
