--- a/index.html
+++ b/index.html
@@ -274,7 +274,10 @@
                         class="influencer-img img-fluid"
                       />
                     </figure>
-                    <span>معاذ القحطاني</span>
+                    <span class="influencer-name">وافي عبد الله المطيري</span>
+                    <span class="influencer-title"
+                      >رئيس منصة المعلمين السعوديين</span
+                    >
                   </a>
                 </div>
                 <div class="swiper-slide">
@@ -286,7 +289,10 @@
                         class="influencer-img img-fluid"
                       />
                     </figure>
-                    <span>معاذ القحطاني</span>
+                    <span class="influencer-name">معاذ القحطاني</span>
+                    <span class="influencer-title"
+                      >رئيس منصة المعلمين السعوديين</span
+                    >
                   </a>
                 </div>
                 <div class="swiper-slide">
@@ -298,7 +304,11 @@
                         class="influencer-img img-fluid"
                       />
                     </figure>
-                    <span>معاذ القحطاني</span>
+                    <span class="influencer-name">معاذ القحطاني</span>
+                    <span class="influencer-title">
+                      رئيس منصة المعلمين السعوديين رئيس منصة المعلمين
+                      السعوديين</span
+                    >
                   </a>
                 </div>
                 <!-- <div class="swiper-slide">
@@ -311,6 +321,7 @@
                       />
                     </figure>
                     <span>معاذ القحطاني</span>
+                    <span class="influencer-title">رئيس منصة المعلمين السعوديين</span>
                   </a>
                 </div>
                 <div class="swiper-slide">
@@ -483,7 +494,10 @@
               <div class="footer-info">
                 <figure class="img-logo">
                   <a href="index.html"
-                    ><img src="images/second-logo.png" class="img-fluid" alt="img-logo"
+                    ><img
+                      src="images/second-logo.png"
+                      class="img-fluid"
+                      alt="img-logo"
                   /></a>
                 </figure>
                 <div class="social">
@@ -533,24 +547,21 @@
                       <div class="contact-box">
                         <i class="las la-map-marker-alt"></i>
                         <span>
-                          المملكة العربية السعودية - الرياض - حي الملقا - طريق الخير
+                          المملكة العربية السعودية - الرياض - حي الملقا - طريق
+                          الخير
                         </span>
                       </div>
                     </li>
                     <li class="nav-foot-li">
                       <a href="tel:+966547434981" class="contact-box">
                         <i class="las la-mobile"></i>
-                        <span style="direction: ltr;">
-                          +966547434981
-                        </span>
+                        <span style="direction: ltr"> +966547434981 </span>
                       </a>
                     </li>
                     <li class="nav-foot-li">
                       <a href="mailto:info@mangm.net" class="contact-box">
                         <i class="las la-envelope"></i>
-                        <span>
-                          info@mangm.net
-                        </span>
+                        <span> info@mangm.net </span>
                       </a>
                     </li>
                   </ul>
@@ -580,7 +591,7 @@
           </div>
         </div>
         <p class="copy-right">© منجم 2022. برعاية تسوق، جميع الحقوق محفوظة</p>
-        </div>
+      </div>
     </footer>
     <!-- footer section -->
     <!-- arrow to top -->
